addex some ciode

--- a/index.html
+++ b/index.html
@@ -10,237 +10,239 @@
 
 <body>
   <!-- Marquee scrolling from right to left -->
-  <div class="marquee-container">
-    <div class="marquee">
-      <ul class="marquee-content">
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
-            </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+  <div class="marquee-body">
+    <div class="marquee-container">
+      <div class="marquee">
+        <ul class="marquee-content">
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-      </ul>
-    </div>
+            </div>
+          </li>
+        </ul>
+      </div>
 
-    <!-- Marquee scrolling from left to right -->
-    <div class="marquee marquee-reverse">
-      <ul class="marquee-content">
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
-            </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+      <!-- Marquee scrolling from left to right -->
+      <div class="marquee marquee-reverse">
+        <ul class="marquee-content">
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-        <li>
-          <div class="marquee-card">
-            <div class="marquee-company-logo">
-              <img src="./image/img.webp" alt="">
             </div>
-            <div class="marquee-testimonial-content">
-              <h2>Clientacquisition.io</h2>
-              <h6>@Clientacquisition.io</h6>
-              <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
-            </div>
+          </li>
+          <li>
+            <div class="marquee-card">
+              <div class="marquee-company-logo">
+                <img src="./image/img.webp" alt="">
+              </div>
+              <div class="marquee-testimonial-content">
+                <h2>Clientacquisition.io</h2>
+                <h6>@Clientacquisition.io</h6>
+                <p>Ritiq signing a $1.7k/Month client on top of 2 new clients! 📈</p>
+              </div>
 
-          </div>
-        </li>
-      </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 
